tests/ui/type/never-type-inference-fail.rs
//! regression test for issue #2151

fn main() {
    let x = panic!(); //~ ERROR type annotations needed
    x.clone();
}
